made it pretty (hopefully)
Signed-off-by: Jennie Dallas <jad554@nau.edu>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS399 Mad Libs</string>
+    <string name="app_name">MadLibs</string>
     <string name="select_your_madlib">Select Your MadLib</string>
     <string name="scary">Scary</string>
     <string name="scary_story">Scary Story</string>
